--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-    <!-- <H1>Uso de Git - Archivo de ejemplo</H1>
+    <H1>Uso de Git - Archivo de ejemplo</H1>
 
     <p>Párrafo de la segunda versión</p>
     
     <p>Párrafo agregado</p>
 
-    <div class="contenedor"></div> -->
+    <div class="contenedor"></div>
 
 
     <script src="/JS/javascript.js" type="text/javascript" async></script>
