--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <p>Párrafo de la segunda versión</p>
     
     <p>Párrafo agregado</p>
+    
+    <p>Párrafo agregado editando desde la web de github</p>
 
     <div class="contenedor"></div>
 
