proyecto v2 para subir a la web de github

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     
     <p>Párrafo agregado editando desde la web de github</p>
 
+    <p>Un cambio realizado desde VS Code que vamos a subir a la web de GitHub</p>
+
     <div class="contenedor"></div>
 
 
