--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <p>Párrafo agregado editando desde la web de github</p>
 
     <p>Un cambio realizado desde VS Code que vamos a subir a la web de GitHub</p>
+    
+    <p>Párrafo modificado en la web de GitHub que se reflejará luego en VS Code</p>
 
     <div class="contenedor"></div>
 
