--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     
     <p>Párrafo modificado en la web de GitHub que se reflejará luego en VS Code</p>
 
+    <p>Otro párrafo desde VS Code</p>
+
     <div class="contenedor"></div>
 
 
