--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <H1>Uso de Git - Archivo de ejemplo</H1>
